--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
+    "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node server.js"
+    "start": "node dist/server.js"
   },
   "keywords": [
     "personal",
@@ -19,5 +21,11 @@
     "express": "^4.18.1",
     "http": "^0.0.1-security",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.16",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
   }
 }
