--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
     "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js"
+    "start": "node --experimental-json-modules dist/server.js"
   },
   "keywords": [
     "personal",
