--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2022",                             /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "experimentalDecorators": true,                 /* Enable experimental support for TC39 stage 2 draft decorators. */
     "emitDecoratorMetadata": true,                  /* Emit design-type metadata for decorated declarations in source files. */
-    "module": "es2022",                             /* Specify what module code is generated. */
+    "module": "esnext",                             /* Specify what module code is generated. */
     "rootDir": "./src",                             /* Specify the root folder within your source files. */
     "moduleResolution": "node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     "types": ["node"],                              /* Specify type package names to be included without being referenced in a source file. */
