--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "express": "^4.18.1",
+    "hbs": "^4.2.0",
     "http": "^0.0.1-security",
     "path": "^0.12.7"
   },
