--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,15 @@
 {
   "name": "georgejmx-demo",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.2.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/three": "^0.144.0",
+    "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vite-plugin-windicss": "^1.8.4",
     "windicss": "^3.5.4"
