--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "license": "GPL-3.0",
   "dependencies": {
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "hbs": "^4.2.0",
     "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
