--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "dist/server.ts",
   "type": "module",
   "scripts": {
-    "dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
+    "dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts http",
     "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-json-modules dist/server.js"
+    "start": "node --experimental-json-modules dist/server.js https"
   },
   "keywords": [
     "personal",
