--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "georgejmx",
   "license": "GPL-3.0",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "body-parser": "^1.20.1",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "hbs": "^4.2.0",
