--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "georgejmx",
   "license": "GPL-3.0",
   "dependencies": {
+    "@prisma/client": "^4.6.1",
     "@types/body-parser": "^1.19.2",
     "body-parser": "^1.20.1",
     "express": "^4.18.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
+    "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   }
