--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^4.6.1",
     "@types/body-parser": "^1.19.2",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "hbs": "^4.2.0",
