--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PROTOCOL=http
-DATABASE_URL="postgresql://postgres:pleasework@localhost:5432/postgres?schema=public"
+DATABASE_URL=postgresql://postgres:pleasework@localhost:5432/postgres?schema=public
