--- a/deploy/docker.env
+++ b/deploy/docker.env
@@ -1,3 +1,3 @@
-POSTGRES_PASSWORD=pleasework
-PROTOCOL=http
+POSTGRES_PASSWORD=somethingsecure
+PROTOCOL=https
 DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD}@thepostgres:5432/postgres?schema=public
