--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "windicss": "^3.5.4"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.1.1",
+    "crypto-js": "^4.1.1",
     "three": "^0.141.0"
   }
 }
