fix(ci): outdated parameter in package.json

--- a/deploy/docker.env
+++ b/deploy/docker.env
@@ -1,3 +1,4 @@
+# remember to edit this file from the web server before deployment
 POSTGRES_PASSWORD=somethingsecure
 PROTOCOL=https
 DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD}@thepostgres:5432/postgres?schema=public
