--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "georgejmx",
   "version": "0.2.1",
   "description": "hi i'm george",
-  "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts http",
+    "dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
     "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js https"
+    "start": "node dist/server.js"
   },
   "keywords": [
     "personal",
