fix(ci): ui dockerfile build

--- a/.dockerignore
+++ b/.dockerignore
@@ -9,7 +9,4 @@ prisma/backups
 prisma/migrations
 
 frontend/node_modules
-frontend/src
-frontend/*.json
-frontend/vite.config.ts
-frontend/tailwind.config.js
+frontend/dist
