--- a/deploy/docker-compose-dev.yaml
+++ b/deploy/docker-compose-dev.yaml
@@ -10,21 +10,15 @@ services:
     restart: on-failure
     container_name: thepostgres
     env_file:
-      - docker.env
+      - docker.dev.env
   app:
-    image: georgejmx/georgejmx:latest
+    build:
+      context: ../.
     restart: on-failure
     env_file:
-      - docker.env
+      - docker.dev.env
     volumes:
       - georgejmx_data:/var/lib/postgresql/data
-      - type: bind
-        source: /etc/letsencrypt/live/georgejmx.dev
-        target: /app/cert/live/georgejmx.dev
-      - type: bind
-        source: /etc/letsencrypt/archive/georgejmx.dev
-        target: /app/cert/archive/georgejmx.dev
     ports:
       - "80:3000"
       - "443:3000"
-    restart: on-failure
