--- a/deploy/docker-compose-dev.yaml
+++ b/deploy/docker-compose-dev.yaml
@@ -14,6 +14,8 @@ services:
   app:
     build:
       context: ../.
+    depends_on:
+      - thepostgres
     restart: on-failure
     env_file:
       - docker.dev.env
@@ -21,4 +23,3 @@ services:
       - georgejmx_data:/var/lib/postgresql/data
     ports:
       - "80:3000"
-      - "443:3000"
