--- a/package.json
+++ b/package.json
@@ -1,38 +1,84 @@
 {
-  "name": "georgejmx",
-  "version": "0.2.1",
-  "description": "hi i'm george",
-  "type": "module",
-  "scripts": {
-    "dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
-    "build": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js"
-  },
-  "keywords": [
-    "personal",
-    "blog",
-    "fractals"
-  ],
-  "author": "georgejmx",
-  "license": "GPL-3.0",
-  "dependencies": {
-    "@prisma/client": "^4.6.1",
-    "@types/body-parser": "^1.19.2",
-    "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "fs": "^0.0.1-security",
-    "hbs": "^4.2.0",
-    "http": "^0.0.1-security",
-    "https": "^1.0.0",
-    "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.7.16",
-    "prisma": "^4.6.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
-  }
+    "name": "georgejmx",
+    "version": "0.2.1",
+    "description": "fractalverse!",
+    "type": "module",
+    "scripts": {
+        "dev": "cp .env.dev .env; node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
+        "compile": "tsc -p .",
+        "test": "npm run compile; jest",
+        "lint": "npx prettier --write src views test frontend/src",
+        "start": "node dist/src/server.js",
+        "lint:ci": "npx prettier --check src views test frontend/src",
+        "test:ci": "jest --collectCoverage"
+    },
+    "keywords": [
+        "personal",
+        "blog",
+        "fractals"
+    ],
+    "author": "georgejmx",
+    "license": "GPL-3.0",
+    "dependencies": {
+        "@prisma/client": "^4.6.1",
+        "@types/body-parser": "^1.19.2",
+        "body-parser": "^1.20.1",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.1",
+        "fs": "^0.0.1-security",
+        "hbs": "^4.2.0",
+        "http": "^0.0.1-security",
+        "https": "^1.0.0",
+        "path": "^0.12.7",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.22.9",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^29.5.3",
+        "@types/node": "^18.7.16",
+        "@types/supertest": "^2.0.12",
+        "@types/uuid": "^9.0.2",
+        "babel-jest": "^29.6.1",
+        "jest": "^29.6.1",
+        "prettier": "^3.0.0",
+        "prisma": "^4.6.1",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.8.2"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "testMatch": [
+            "**/dist/**/*.test.js"
+        ],
+        "transform": {
+            "^.+\\.(ts|tsx)?$": "ts-jest",
+            "^.+\\.(js|jsx)$": "babel-jest"
+        },
+        "setupFiles": [
+            "./dist/test/setup.js"
+        ],
+        "collectCoverage": false,
+        "coveragePathIgnorePatterns": [
+            "dist/test"
+        ],
+        "forceExit": true,
+        "detectOpenHandles": true
+    },
+    "babel": {
+        "presets": [
+            "@babel/preset-env"
+        ]
+    },
+    "prisma": {
+        "schema": "assets/schema.prisma"
+    },
+    "prettier": {
+        "printWidth": 92,
+        "tabWidth": 4,
+        "trailingComma": "es5"
+    }
 }
