--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "npm run compile; jest",
         "lint": "npx prettier --write src views test frontend/src",
         "start": "node dist/src/server.js",
-        "lint:ci": "npx prettier --check src views test frontend/src",
+        "lint:ci": "npx prettier --check src views test frontend/src; npx prisma validate",
         "test:ci": "jest --collectCoverage"
     },
     "keywords": [
@@ -20,33 +20,37 @@
     "author": "georgejmx",
     "license": "GPL-3.0",
     "dependencies": {
-        "@prisma/client": "^4.6.1",
-        "@types/body-parser": "^1.19.2",
-        "body-parser": "^1.20.1",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.1",
-        "fs": "^0.0.1-security",
-        "hbs": "^4.2.0",
-        "http": "^0.0.1-security",
-        "https": "^1.0.0",
-        "path": "^0.12.7",
-        "uuid": "^9.0.0"
+        "@prisma/client": "4.16.2",
+        "@types/body-parser": "1.19.2",
+        "prisma": "4.16.2",
+        "body-parser": "1.20.2",
+        "dotenv": "16.3.1",
+        "express": "4.18.2",
+        "fs": "0.0.1-security",
+        "hbs": "4.2.0",
+        "http": "0.0.1-security",
+        "https": "1.0.0",
+        "path": "0.12.7",
+        "uuid": "9.0.0"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.22.9",
-        "@types/express": "^4.17.13",
-        "@types/jest": "^29.5.3",
-        "@types/node": "^18.7.16",
-        "@types/supertest": "^2.0.12",
-        "@types/uuid": "^9.0.2",
-        "babel-jest": "^29.6.1",
-        "jest": "^29.6.1",
+        "@babel/preset-env": "7.22.9",
+        "@types/express": "4.17.17",
+        "@types/jest": "29.5.3",
+        "@types/node": "18.17.0",
+        "@types/supertest": "2.0.12",
+        "@types/uuid": "9.0.2",
+        "babel-jest": "29.6.1",
         "prettier": "^3.0.0",
-        "prisma": "^4.6.1",
-        "supertest": "^6.3.3",
-        "ts-jest": "^29.1.1",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.8.2"
+        "jest": "29.6.1",
+        "supertest": "6.3.3",
+        "ts-jest": "29.1.1",
+        "ts-node": "10.9.1",
+        "typescript": "4.9.5"
+    },
+    "engines": {
+        "npm": "9.8.0",
+        "node": "20.5.0"
     },
     "jest": {
         "preset": "ts-jest",
@@ -74,7 +78,7 @@
         ]
     },
     "prisma": {
-        "schema": "assets/schema.prisma"
+        "schema": "./assets/schema.prisma"
     },
     "prettier": {
         "printWidth": 92,
