--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "description": "fractalverse!",
     "type": "module",
     "scripts": {
-        "dev": "cp .env.dev .env; node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
+        "dev": "cp .env.dev .env; npx prisma validate; node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
         "compile": "tsc -p .",
         "test": "npm run compile; jest",
         "lint": "npx prettier --write src views test frontend/src",
         "start": "node dist/src/server.js",
-        "lint:ci": "npx prettier --check src views test frontend/src; npx prisma validate",
+        "lint:ci": "npx prettier --check src views test frontend/src",
         "test:ci": "jest --collectCoverage"
     },
     "keywords": [
