--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -12,6 +12,7 @@ jobs:
               with:
                   node-version: 20.x
             - run: npm ci
+            - run: npm audit
             - run: npm run lint:ci
             - run: npm run compile
             - run: npm run test:ci
