--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,12 +2,17 @@ name: Deploy
 
 on:
     workflow_run:
-        workflows: ["validate"]
-        branches: [main]
-        types: [completed]
+        workflows:
+            - Validate
+            - CodeQL
+        branches:
+            - main
+        types:
+            - completed
 
 jobs:
     build:
+        name: Build and Release
         runs-on: ubuntu-latest
         if: ${{ github.event.workflow_run.conclusion == 'success' }}
         steps:
