--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -4,10 +4,11 @@ on: [push]
 
 jobs:
     check:
+        name: Check
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - name: Initialise Node.js v20
+            - name: Check Node.js v20 Environment
               uses: actions/setup-node@v3
               with:
                   node-version: 20.x
