--- a/deploy/docker-compose-dev.yml
+++ b/deploy/docker-compose-dev.yml
@@ -10,22 +10,19 @@ services:
         restart: on-failure
         container_name: thepostgres
         env_file:
-            - docker.env
+            - docker.env.dev
         volumes:
             - georgejmx_data:/var/lib/postgresql/data
     app:
-        image: georgejmx/georgejmx:latest
+        build:
+            context: ../.
         depends_on:
             - thepostgres
         restart: on-failure
+        container_name: georgejmx
         env_file:
-            - docker.env
+            - docker.env.dev
         volumes:
-            - type: bind
-              source: /etc/letsencrypt/live/georgejmx.dev
-              target: /app/cert/live/georgejmx.dev
-            - type: bind
-              source: /etc/letsencrypt/archive/georgejmx.dev
-              target: /app/cert/archive/georgejmx.dev
+            - georgejmx_data:/var/lib/postgresql/data
         ports:
-            - "443:3000"
+            - "80:3000"
