--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
     "name": "georgejmx",
-    "version": "0.2.1",
+    "version": "0.3.0",
     "description": "fractalverse!",
     "type": "module",
     "scripts": {
-        "dev": "cp .env.dev .env; npx prisma validate; node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
-        "compile": "tsc -p .",
+        "dev": "cp docs/.env.dev .env; npx prisma validate; node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
+        "bundle": "rollup -c rollup.config.ts --configPlugin typescript; tailwindcss -i ./src/client/input.css -o ./assets/output.css",
+        "compile": "npm run bundle; tsc -p .",
         "test": "npm run compile; jest",
-        "lint": "npx prettier --write src views test frontend/src",
+        "lint": "npx prettier --write src views test",
         "start": "node dist/src/server.js",
-        "lint:ci": "npx prettier --check src views test frontend/src",
+        "lint:ci": "npx prettier --check src views test",
         "test:ci": "cp .github/.env.ci .env; jest --collectCoverage"
     },
     "keywords": [
@@ -21,36 +22,48 @@
     "license": "GPL-3.0",
     "dependencies": {
         "@prisma/client": "4.16.2",
-        "@types/body-parser": "1.19.2",
-        "prisma": "4.16.2",
+        "bcryptjs": "2.4.3",
         "body-parser": "1.20.2",
         "dotenv": "16.3.1",
         "express": "4.18.2",
-        "fs": "0.0.1-security",
+        "express-rate-limit": "6.8.0",
+        "fs": "^0.0.1-security",
         "hbs": "4.2.0",
+        "helmet": "7.0.0",
         "http": "0.0.1-security",
         "https": "1.0.0",
         "path": "0.12.7",
+        "prisma": "4.16.2",
         "uuid": "9.0.0"
     },
     "devDependencies": {
         "@babel/preset-env": "7.22.9",
+        "@rollup/plugin-commonjs": "25.0.3",
+        "@rollup/plugin-node-resolve": "15.1.0",
+        "@rollup/plugin-typescript": "11.1.2",
+        "@types/bcryptjs": "2.4.2",
+        "@types/body-parser": "1.19.2",
         "@types/express": "4.17.17",
         "@types/jest": "29.5.3",
         "@types/node": "18.17.0",
         "@types/supertest": "2.0.12",
+        "@types/three": "^0.154.0",
         "@types/uuid": "9.0.2",
         "babel-jest": "29.6.1",
-        "prettier": "^3.0.0",
         "jest": "29.6.1",
+        "prettier": "^3.0.0",
+        "rollup": "^3.26.3",
         "supertest": "6.3.3",
+        "tailwindcss": "3.3.3",
+        "three": "^0.141.0",
         "ts-jest": "29.1.1",
         "ts-node": "10.9.1",
+        "tslib": "2.6.0",
         "typescript": "4.9.5"
     },
     "engines": {
-        "npm": "9.8.0",
-        "node": "20.5.0"
+        "npm": ">=9.8.0 <10.0.0",
+        "node": ">=20.5.0 <21.0.0"
     },
     "jest": {
         "preset": "ts-jest",
@@ -70,7 +83,8 @@
             "dist/test"
         ],
         "forceExit": true,
-        "detectOpenHandles": true
+        "detectOpenHandles": true,
+        "silent": true
     },
     "babel": {
         "presets": [
