--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
-  "compilerOptions": {
-    "target": "es2022",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "module": "esnext",
-    "rootDir": ".",
-    "moduleResolution": "node",
-    "types": ["node", "jest"],
-    "resolveJsonModule": true,
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
-  },
-  "include": ["./src/**/*.ts", "./test/**/*.ts"]
-} 
+    "compilerOptions": {
+        "target": "es2022",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "module": "es2022",
+        "rootDir": ".",
+        "moduleResolution": "node",
+        "types": ["node", "jest"],
+        "resolveJsonModule": true,
+        "outDir": "./dist",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "noImplicitAny": true
+    },
+    "include": ["./src/**/*.ts", "./test/**/*.ts"]
+}
