--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,28 @@
 name: Deploy
 
 on:
-    workflow_run:
-        workflows:
-            - Validate
-            - CodeQL
-        branches:
-            - main
-        types:
-            - completed
+  push:
+    branches:
+      - "main"
 
 jobs:
-    build:
-        name: Build and Release
-        runs-on: ubuntu-latest
-        if: ${{ github.event.workflow_run.conclusion == 'success' }}
-        steps:
-            - uses: actions/checkout@v3
-            - name: Login to Docker Hub
-              uses: docker/login-action@v2
-              with:
-                  username: ${{ secrets.DOCKER_HUB_USERNAME }}
-                  password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
-            - name: Docker Build and push
-              uses: docker/build-push-action@v3
-              with:
-                  context: .
-                  file: ./Dockerfile
-                  push: true
-                  tags: ${{ secrets.DOCKER_HUB_USERNAME }}/georgejmx:latest
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Docker Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/georgejmx:latest
