--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "scripts": {
         "dev": "cp docs/.env.dev .env; npx prisma validate; node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
         "bundle": "rollup -c rollup.config.ts --configPlugin typescript; tailwindcss -i ./src/client/input.css -o ./assets/output.css",
-        "compile": "npm run bundle; tsc -p .",
-        "test": "npm run compile; jest",
-        "lint": "npx prettier --write src views test",
-        "start": "node dist/src/server.js",
-        "lint:ci": "npx prettier --check src views test",
-        "test:ci": "cp .github/.env.ci .env; jest --collectCoverage"
+        "jest-test": "bun bundle; jest",
+        "lint": "bun prettier --write src views test",
+        "lint:ci": "bun prettier --check src views test",
+        "jest-test:ci": "cp .github/.env.ci .env; jest --collectCoverage"
     },
     "keywords": [
         "personal",
@@ -24,6 +22,7 @@
         "@prisma/client": "4.16.2",
         "bcryptjs": "2.4.3",
         "body-parser": "1.20.2",
+        "bun-types": "^1.0.1",
         "dotenv": "16.3.1",
         "express": "4.18.2",
         "express-rate-limit": "6.8.0",
@@ -45,7 +44,6 @@
         "@types/body-parser": "1.19.2",
         "@types/express": "4.17.17",
         "@types/jest": "29.5.3",
-        "@types/node": "18.17.0",
         "@types/supertest": "2.0.12",
         "@types/three": "^0.154.0",
         "@types/uuid": "9.0.2",
@@ -57,13 +55,8 @@
         "tailwindcss": "3.3.3",
         "three": "^0.141.0",
         "ts-jest": "29.1.1",
-        "ts-node": "10.9.1",
         "tslib": "2.6.0",
         "typescript": "4.9.5"
-    },
-    "engines": {
-        "npm": ">=9.8.0 <10.0.0",
-        "node": ">=20.5.0 <21.0.0"
     },
     "jest": {
         "preset": "ts-jest",
