--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "description": "fractalverse!",
     "type": "module",
     "scripts": {
-        "dev": "cp docs/.env.dev .env; npx prisma validate; node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
+        "dev": "cp docs/.env.dev .env; npx prisma generate; npx prisma validate; node --experimental-specifier-resolution=node --loader ts-node/esm src/server.ts",
         "bundle": "rollup -c rollup.config.ts --configPlugin typescript; tailwindcss -i ./src/client/input.css -o ./assets/output.css",
         "compile": "npm run bundle; tsc -p .",
         "test": "npm run compile; jest",
-        "lint": "npx prettier --write src views test",
+        "lint": "npx prettier --write src views test docs *.ts *.json README.md",
         "start": "node dist/src/server.js",
-        "lint:ci": "npx prettier --check src views test",
+        "lint:ci": "npx prettier --check src views test docs *.ts *.json README.md",
         "test:ci": "cp .github/.env.ci .env; jest --collectCoverage"
     },
     "keywords": [
@@ -62,7 +62,7 @@
         "typescript": "4.9.5"
     },
     "engines": {
-        "npm": ">=9.8.0 <10.0.0",
+        "npm": ">=9.8.0 <11.0.0",
         "node": ">=20.5.0 <21.0.0"
     },
     "jest": {
