--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 
 services:
     thepostgres:
-        image: postgres
+        image: postgres:15.5
         restart: on-failure
         container_name: thepostgres
         env_file:
