--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -14,5 +14,4 @@ jobs:
                   node-version: 20.x
             - run: npm ci
             - run: npm run lint:ci
-            - run: npm run compile
-            - run: npm run test:ci
+            - run: npm run build
