--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,6 +1,8 @@
 name: Validate
 
-on: [push]
+on:
+    pull_request:
+        branches: ["main"]
 
 jobs:
     check:
@@ -8,6 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
+
             - name: Check Node.js v20 Environment
               uses: actions/setup-node@v3
               with:
