--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,12 @@
-name: Deploy
+name: Release
 
 on:
   push:
     branches:
-      - "main"
-      - "feat/simple-static-site"
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
     build:
@@ -17,6 +19,7 @@ jobs:
               with:
                 node-version: 20.x
             - run: npm ci
+            - run: npm run lint:ci
             - run: npm run build
 
             - name: Upload GitHub Pages artifact
@@ -26,14 +29,14 @@ jobs:
 
     deploy:
         needs: build
+        if: github.ref == 'refs/heads/main'
+        runs-on: ubuntu-latest
         permissions:
             pages: write
             id-token: write
         environment:
             name: github-pages
             url: ${{ steps.deployment.outputs.page_url }}
-    
-        runs-on: ubuntu-latest
         steps:
             - name: Deploy to GitHub Pages
               id: deployment
