--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwindcss": "3.4.17",
     "three": "0.141.0"
   },
   "devDependencies": {
