--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "georgejmx",
   "license": "GPL-3.0",
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.17",
