feat: content revamp

--- a/package.json
+++ b/package.json
@@ -16,20 +16,18 @@
   ],
   "author": "georgejmx",
   "license": "GPL-3.0",
-  "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwindcss": "3.4.17",
-    "three": "0.141.0"
-  },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/three": "0.141.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "tailwindcss": "3.4.17",
+    "three": "0.141.0",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
