chore: copy changes

--- a/src/models/side-projects.json
+++ b/src/models/side-projects.json
@@ -1,5 +1,11 @@
 [
   {
+    "name": "StructDiff",
+    "imageName": "placeholder.jpeg",
+    "url": "https://github.com/georgejmx/struct-diff",
+    "description": "Determine the relative structure of different websites using vector based search"
+  },
+  {
     "name": "Phantasos",
     "imageName": "phantasos.png",
     "url": "https://phantasos.vercel.app",
